<resources>
    <string name="app_name">Porcelain</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_number_lbl">Enter your mobile number to continue.</string>
    <string name="greetings_lbl">Hello there!</string>
    <string name="number_hint">9XX XXX XXX</string>
    <string name="option_login_lbl">Or continue with a social account</string>
    <string name="facebook_lbl">Facebook</string>
    <string name="google_lbl">Google</string>
    <string name="version_number_lbl">Version 0.2 (7)</string>
    <string name="continue_lbl">Continue</string>
    <string name="home_lbl">HOME</string>
    <string name="scan_qr_lbl">SCAN QR</string>
    <string name="porcelain_lbl">PORCELAIN</string>
    <string name="profile_lbl">PROFILE</string>
    <string name="shop_lbl">SHOP</string>
    <string name="news_lbl">News</string>
    <string name="prologue_lbl">Prologue</string>
    <string name="promotions_lbl">Promotions</string>
    <string name="article_of_the_week_lbl">Article of the week</string>
    <string name="treatments_lbl">Treatments</string>
    <string name="appointments_lbl">Appointments</string>
    <string name="products_lbl">Products</string>
    <string name="notifications_lbl">Notifications</string>
    <string name="chatbot_lbl">Chatbot</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid coordinates</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="enter_the_6_digit_code_sent_to_lbl">Enter the 6-digit code sent to:</string>
    <string name="didn_t_receive_it_lbl">Didn’t receive it?</string>
    <string name="resend_code_lbl">Resend Code</string>
</resources>
