<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/group_3">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:keepScreenOn="true"
        android:src="@mipmap/porcelain_logo"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="67dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_hello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="33dp"
        android:text="@string/greetings_lbl"
        android:textSize="30sp"
        style="@style/TextViewLoginStyle"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_enter_mob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:text="@string/enter_number_lbl"
        android:textSize="16sp"
        android:lineSpacingExtra="2sp"
        style="@style/TextViewLoginStyle"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_hello" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/number_hint"
        android:textSize="18sp"
        android:padding="8dp"
        android:textColor="@color/md_white_1000"
        android:letterSpacing="0.06"
        android:textColorHint="@color/md_white_1000"
        android:singleLine="true"
        android:background="@drawable/square_shape"
        app:layout_constraintStart_toEndOf="@id/ccp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_enter_mob" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:ccp_countryPreference="ph"
        app:ccp_contentColor="#4dffffff"
        app:ccp_autoFormatNumber="true"
        app:ccp_defaultNameCode="ph"
        app:ccp_showNameCode="false"
        app:layout_constraintTop_toBottomOf="@id/text_view_enter_mob"
        app:layout_constraintStart_toStartOf="@id/text_view_enter_mob"
        app:layout_constraintEnd_toStartOf="@id/edit_text_number"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_number"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_choose_social"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Or continue with a social account"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_margin="8dp"
        android:lineSpacingExtra="5sp"
        style="@style/TextViewLoginStyle"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_frame" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_frame"
        android:layout_width="0dp"
        android:layout_height="165dp"
        android:elevation="8dp"
        android:background="@color/md_white_1000"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_facebook"
            android:layout_width="0dp"
            style="@style/ButtonSocialLogin"
            android:backgroundTint="#33579c"
            android:text="@string/facebook_lbl"
            app:icon="@mipmap/facebook"
            app:iconTint="@null"
            app:iconGravity="start"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:textColor="@color/md_white_1000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_view_version"
            app:layout_constraintEnd_toStartOf="@id/button_google"
            app:layout_constraintStart_toStartOf="parent"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_google"
            android:layout_width="0dp"
            style="@style/ButtonSocialLogin"
            android:textColor="#3f3f3f"
            android:text="@string/google_lbl"
            android:textAllCaps="false"
            app:iconGravity="start"
            app:icon="@mipmap/google"
            app:iconTint="@null"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_view_version"
            app:layout_constraintStart_toEndOf="@id/button_facebook"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/rectangle_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="2sp"
            android:text="@string/version_number_lbl"
            android:textColor="#3f3f3f"
            android:textSize="12sp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@id/image_view_rectangle"
            app:layout_constraintEnd_toEndOf="@id/button_google"
            app:layout_constraintStart_toStartOf="@id/button_facebook"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>