<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/group_3">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_code_lbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="152dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/enter_the_6_digit_code_sent_to_lbl"
        android:textColor="@color/md_white_1000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_user_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/md_white_1000"
        android:lineSpacingExtra="2sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        tools:text="+639205440526"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_text_code"
        app:layout_constraintTop_toBottomOf="@id/text_view_code_lbl"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_code"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:textSize="24sp"
        android:textColorHint="@color/md_white_1000"
        android:textColor="@color/md_white_1000"
        android:background="@drawable/square_shape"
        android:textAlignment="center"
        tools:text="00000"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/guide_line_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_receive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="#e9e9e9"
        android:lineSpacingExtra="10sp"
        android:gravity="center_horizontal"
        android:text="@string/didn_t_receive_it_lbl"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_resend"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_resend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="#e9e9e9"
        android:lineSpacingExtra="10sp"
        android:gravity="center_horizontal"
        android:text="@string/resend_code_lbl"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:clickable="true"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_timer"
        android:focusable="true" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="#e9e9e9"
        android:lineSpacingExtra="5sp"
        tools:text="Request new code in 04:59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guide_line_bottom"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>



</androidx.constraintlayout.widget.ConstraintLayout>