<?xml version="1.0" encoding="utf-8"?>

<layout>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:backgroundTint="@color/md_white_1000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <View
            android:layout_width="0dp"
            android:layout_height="6dp"
            android:background="#e9e9e9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guide_line_center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guide_line_center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_articles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/md_white_1000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_line_center">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:overScrollMode="never"
                app:chipSpacing="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_news"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_lbl" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_prologue"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prologue_lbl" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_promotions"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promotions_lbl" />


            </com.google.android.material.chip.ChipGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_article_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="6sp"
                android:text="Article of the week"
                android:textColor="#595e60"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/guide_line_bottom_one"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_container" />


            <LinearLayout
                android:id="@+id/dot_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/text_view_article_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_view_article_title">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1.6dp"
                    android:src="@drawable/dot" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1.6dp"
                    android:src="@drawable/dot" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1.6dp"
                    android:src="@drawable/dot" />


            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_bottom_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_articles"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_line_bottom_one" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
